--- a/src/index.njk
+++ b/src/index.njk
@@ -158,7 +158,7 @@ title: Luft & Liebe
       </div>
       <img class="ferienheim__img js-io enter appear--bottom" src="images/foto--ferienheim.jpg" alt="Ein Foto des Ferienheims in Vigiljoch.">
       <div class="ferienheim__text wrapper--text">
-        <p class="js-io enter appear--bottom">Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfügen über <span class="highlight highlight--alt">4-8 Betten</span> und <span class="highlight highlight--alt">Gemeinschaftsbädern</span> und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Leider finden hier nicht alle Gäste Platz, daher freuen wir uns über Freiwillige, die auf die Family Alm ausweichen. Danke!</p>
+        <p class="js-io enter appear--bottom">Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum Schlafen. Die Zimmer verfügen über <span class="highlight highlight--alt">4-8 Betten</span> und <span class="highlight highlight--alt">Gemeinschaftsbäder</span> mit Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Leider finden hier nicht alle Gäste Platz, daher freuen wir uns über Freiwillige, die auf die Family Alm ausweichen. Danke!</p>
       </div>
     </div>
     <div class="gampl">
@@ -176,7 +176,7 @@ title: Luft & Liebe
     </div>
     <div class="gampl__text section--alt section--padded">
       <div class="wrapper--text js-io enter appear--bottom">
-        <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet <span class="highlight highlight--alt">7&nbsp;Apartments</span> für insgesamt ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr <span class="highlight highlight--alt">Privacy und Komfort</span> als das Ferienheim. Bitte versucht nicht selbst zu buchen sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
+        <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet <span class="highlight highlight--alt">7&nbsp;Apartments</span> für bis zu 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr <span class="highlight highlight--alt">Privacy und Komfort</span> als das Ferienheim. Bitte versucht nicht selbst zu buchen sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
       </div>
     </div>
 
