--- a/src/index.njk
+++ b/src/index.njk
@@ -95,20 +95,19 @@ title: Luft & Liebe
         <div class="img-overlay__content" data-type="plane">
           <h3 class="js-io enter appear--bottom">Mit dem Flugzeug</h3>
           <ul>
-            <li class="js-io enter appear--bottom">Von Hamburg mit Ryanair nach Bergamo, Verona</li>
-            <li class="js-io enter appear--bottom">Von Hamburg mit Lufthansa nach München</li>
-            <li class="js-io enter appear--bottom">Von Berlin mit Ryanair nach Bergamo, München</li>
-            <li class="js-io enter appear--bottom">Von Berlin mit Lufthansa nach München</li>
-            <li class="js-io enter appear--bottom">Von Berlin mit easyjet nach Innsbruck, Malpensa</li>
-            <li class="js-io enter appear--bottom">Von Wien mit Ryanair nach Bergamo</li>
-            <li class="js-io enter appear--bottom">Von Wien mit Lufthansa nach Verona</li>
-          </ul>
+            <li class="js-io enter appear--bottom">Von Hamburg nach Bergamo (Ryanair), Verona (Ryanair) oder München (Lufthansa)</li>
+
+            <li class="js-io enter appear--bottom">Von Berlin nach Bergamo (Ryanair), München (Ryanair, Lufthansa), Innsbruck (easyjet) oder Malpensa (easyjet)</li>
+
+            <li class="js-io enter appear--bottom">Von Wien nach Bergamo (Ryanair) oder Verona (Lufthansa)</li>
+
+            <li class="js-io enter appear--bottom">Von den Flughäfen gehts entweder mit dem Mietwagen oder mit dem Zug Richtung Meran</li>
           <a href="images/map--europe--plane.jpg" class="btn btn--primary">Karte anzeigen</a>
         </div>
         <div class="img-overlay__content" data-type="train">
           <h3 class="js-io enter appear--bottom">Mit dem Zug</h3>
           <ul class="js-io enter appear--bottom">
-            <li class="js-io enter appear--bottom">Mit ICE nach München</li>
+            <li class="js-io enter appear--bottom">Mit dem ICE nach München</li>
             <li class="js-io enter appear--bottom">Von dort mit dem EC Richtung Bologna/Venezia/Verona bis nach Bozen</li>
           </ul>
           <a href="images/map--europe--train.jpg" class="btn btn--primary">Karte anzeigen</a>
@@ -140,7 +139,7 @@ title: Luft & Liebe
       </figure>
     </a>
     <div class="wrapper--text js-io enter appear--bottom">
-      <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 328 auf 1486 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf 1747 Metern über dem Meeresspiegel.</p>
+      <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 300 auf 1500 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf knapp 1800 Metern über dem Meeresspiegel.</p>
     </div>
   </section>
   <div class="wrapper--text js-io enter appear--bottom">
@@ -158,7 +157,7 @@ title: Luft & Liebe
       </div>
       <img class="ferienheim__img js-io enter appear--bottom" src="images/foto--ferienheim.jpg" alt="Ein Foto des Ferienheims in Vigiljoch.">
       <div class="ferienheim__text wrapper--text">
-        <p class="js-io enter appear--bottom">Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum Schlafen. Die Zimmer verfügen über <span class="highlight highlight--alt">4-8 Betten</span> und <span class="highlight highlight--alt">Gemeinschaftsbäder</span> mit Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Leider finden hier nicht alle Gäste Platz, daher freuen wir uns über Freiwillige, die auf die Family Alm ausweichen. Danke!</p>
+        <p class="js-io enter appear--bottom">Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum Schlafen. Die Zimmer verfügen über <span class="highlight highlight--alt">4-8 Betten</span> und <span class="highlight highlight--alt">Gemeinschaftsbädern</span> mit Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Leider finden hier nicht alle Gäste Platz, daher freuen wir uns über Freiwillige, die auf die Family Alm ausweichen. Danke!</p>
       </div>
     </div>
     <div class="gampl">
