- add sublist transport

--- a/src/index.njk
+++ b/src/index.njk
@@ -95,13 +95,29 @@ title: Luft & Liebe
         <div class="img-overlay__content" data-type="plane">
           <h3 class="js-io enter appear--bottom">Mit dem Flugzeug</h3>
           <ul>
-            <li class="js-io enter appear--bottom">Von Hamburg nach Bergamo (Ryanair), Verona (Ryanair) oder München (Lufthansa)</li>
-
-            <li class="js-io enter appear--bottom">Von Berlin nach Bergamo (Ryanair), München (Ryanair, Lufthansa), Innsbruck (easyjet) oder Malpensa (easyjet)</li>
-
-            <li class="js-io enter appear--bottom">Von Wien nach Bergamo (Ryanair) oder Verona (Lufthansa)</li>
-
+            <li class="js-io enter appear--bottom">Von Hamburg nach
+              <ul>
+                <li>Bergamo (Ryanair),</li>
+                <li>Verona (Ryanair),</li>
+                <li>München (Lufthansa)</li>
+              </ul>
+            </li>
+            <li class="js-io enter appear--bottom">Von Berlin nach
+              <ul>
+                <li>Bergamo (Ryanair),</li>
+                <li>München (Ryanair, Lufthansa),</li>
+                <li>Innsbruck (easyjet),</li>
+                <li>Malpensa (easyjet)</li>
+              </ul>
+            </li>
+            <li class="js-io enter appear--bottom">Von Wien nach
+              <ul>
+                <li>Bergamo (Ryanair),</li>
+                <li>Verona (Lufthansa)</li>
+              </ul>
+            </li>
             <li class="js-io enter appear--bottom">Von den Flughäfen gehts entweder mit dem Mietwagen oder mit dem Zug Richtung Meran</li>
+          </ul>
           <a href="images/map--europe--plane.jpg" class="btn btn--primary">Karte anzeigen</a>
         </div>
         <div class="img-overlay__content" data-type="train">
