--- a/src/index.njk
+++ b/src/index.njk
@@ -33,7 +33,7 @@ title: Luft & Liebe
           {% include 'datum.svg' %}
         </time>
       </div>
-      <p class="first-letter js-io enter appear--bottom">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
+      <p class="first-letter js-io enter appear--bottom">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir dich ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
       <div class="registration js-io enter appear--bottom">
         <a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank" class="btn btn--primary">Als Gast registrieren</a>
       </div>
@@ -155,7 +155,7 @@ title: Luft & Liebe
       </figure>
     </a>
     <div class="wrapper--text js-io enter appear--bottom">
-      <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 300 auf 1500 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf knapp 1800 Metern über dem Meeresspiegel.</p>
+      <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 300 auf 1500 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum <span class="highlight">Ferienheim</span> oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf knapp 1800 Metern über dem Meeresspiegel.</p>
     </div>
   </section>
   <div class="wrapper--text js-io enter appear--bottom">
@@ -217,7 +217,7 @@ title: Luft & Liebe
       <div class="section__title h2 js-io enter appear--bottom">Noch Urlaub übrig?</div>
     </div>
     <div class="wrapper--text js-io enter appear--bottom">
-      <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten und Aktivitäten.</p>
+      <p>Wenn du außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtest, gib uns Bescheid und wir geben dir weitere Tipps zu Übernachtungsmöglichkeiten und Aktivitäten.</p>
     </div>
   </section>
   <section class="volunteering section section--alt section--padded">
@@ -225,7 +225,7 @@ title: Luft & Liebe
       <h2 class="js-io enter appear--bottom">Volunteering</h2>
       <h3 class="js-io enter appear--bottom">Artist Registration</h3>
       <p class="js-io enter appear--bottom">Du hast Bock unser Festival <span class="highlight highlight--alt">künstlerisch</span> zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder oder... Wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
-      <p class="js-io enter appear--bottom"><span class="highlight highlight--alt">Achtung:</span> solltest du irgend eine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
+      <p class="js-io enter appear--bottom"><span class="highlight highlight--alt">Achtung:</span> solltest du irgendeine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
       <div class="registration js-io enter appear--bottom">
         <a href="https://forms.gle/vZNJUtvGt85ghkeW8" target="_blank" class="btn btn--primary">Als Artist registrieren</a>
       </div>
