- add train info bozen lana

--- a/src/index.njk
+++ b/src/index.njk
@@ -125,6 +125,7 @@ title: Luft & Liebe
           <ul class="js-io enter appear--bottom">
             <li class="js-io enter appear--bottom">Mit dem ICE nach München</li>
             <li class="js-io enter appear--bottom">Von dort mit dem EC Richtung Bologna/Venezia/Verona bis nach Bozen</li>
+            <li class="js-io enter appear--bottom">Von Bozen mit dem Regionalzug nach Lana/Burgstall und eine kurze Busfahrt, Linie 211, zum Busbahnhof Lana (Seilbahn fußläufig erreichbar)</li>
           </ul>
           <a href="images/map--europe--train.jpg" class="btn btn--primary">Karte anzeigen</a>
         </div>
