- add dress code

--- a/src/index.njk
+++ b/src/index.njk
@@ -260,6 +260,8 @@ title: Luft & Liebe
   </div>
   <section class="photo section section--padded">
     <div class="wrapper--text">
+      <h2 class="js-io enter appear--bottom">Was zieh ich an?</h2>
+      <p class="js-io enter appear--bottom">Wir feiern ein Fest ganz <span class="highlight">frei von strengen Regeln</span>. Ganz nach dem Motto „locker flockig“ kommst du einfach wie du dich am wohlsten fühlst. Es gibt jedoch ein paar Dinge zu beachten: hoch oben auf dem Berg gibt es <span class="highlight">keine befestigten Straßen</span> und das Gelände ist unwegsam. Bitte lass daher die hohen Schuhe zuhause. Wetter und Temperaturen lassen sich vorab nur schwer einschätzen. Es könnte <span class="highlight">tagsüber recht heiß</span> werden, abends aber <span class="highlight">mit Sicherheit eher kühl</span>. Zwiebel-Look und was Warmes zum Überziehen sind daher von Vorteil. </p>
       <h2 class="js-io enter appear--bottom">Fotografieren</h2>
       <p class="js-io enter appear--bottom">Wir möchten euch bitten zur freien Trauung eure <span class="highlight highlight--alt">Handys und Kameras wegzupacken</span> und den Moment der Zeremonie voll und ganz zu genießen. Während des ganzen Tages werden sich <span class="highlight highlight--alt">professionelle Fotografen</span> um die Bilder kümmern, die wir gerne mit euch teilen werden.</p>
       <h2 class="js-io enter appear--bottom">Filmen</h2>
